<resources>
    <string name="app_name">BitBacklash Newsfeed</string>

    <!-- news_article layout tools -->
    <string name="tools_title_of_article">This is just a really long Title of the Article, so I can see how it looks</string>
    <string name="tools_date_of_article">1 day ago</string>
    <string name="tools_author_of_article">By Stephen Wood</string>

    <!-- Error Messages -->
    <string name="no_internet">No internet connectivity. Connect to the internet and swipe down to refresh.</string>
    <string name="no_articles_found">No news articles found. You can swipe down to try and refresh.</string>

    <!-- Time strings -->
    <string name="time_seconds_ago">seconds ago</string>
    <string name="time_minute_ago">minute ago</string>
    <string name="time_minutes_ago">minutes ago</string>
    <string name="time_hour_ago">hour ago</string>
    <string name="time_hours_ago">hours ago</string>
    <string name="time_day_ago">day ago</string>

    <!-- Title strings -->
    <string name="title_games">Games</string>
    <string name="title_sports">Sports</string>
    <string name="title_culture">Culture</string>
    <string name="title_politics">Politics</string>
    <string name="title_books">Books</string>
    <string name="title_technology">Technology</string>
    <string name="title_news">News</string>

    <!-- Settings menu -->
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <!-- Setting - Number of Articles -->
    <string name="settings_no_of_articles_label">Number of Articles</string>
    <string name="settings_no_of_articles_key" translatable="false">no_of_articles</string>
    <string name="settings_no_of_articles_default" translatable="false">@string/settings_no_of_articles_10</string>

    <!-- no_of_articles options -->
    <string name="settings_no_of_articles_5">5</string>
    <string name="settings_no_of_articles_10">10</string>
    <string name="settings_no_of_articles_15">15</string>
    <string name="settings_no_of_articles_20">20</string>
    <string name="settings_no_of_articles_25">25</string>

    <!-- Setting - order-by -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- order-by newest option -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- order-by oldest option -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

</resources>
