<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_no_of_articles_default"
        android:entries="@array/settings_no_of_articles"
        android:entryValues="@array/settings_no_of_articles"
        android:key="@string/settings_no_of_articles_key"
        android:title="@string/settings_no_of_articles_label" />

</PreferenceScreen>